Mon Jun 27 09:57:23 1994  Steve Chamberlain  (sac@cirdan.cygnus.com)

	* ser-go32.c: Rewrite to run under windows.
	* ser-e7kpc.c: New file to support the E7000 with the PC ISA
	bus interface.
	* serial.c (serial_open): Notice device "pc".
	* remote-e7000.c: Fix copyright date.
	(expect): Compare \n and \r the same.
	(e7000_open): Allow pc as a serial port
	* sh/sh.mt: Add ser-e7kpc.
	* h8300/h8300hms.mt: Add ser-e7kpc.
	* main.c (proc_wait): Don't wait if using go32.

Mon Jun 27 00:35:51 1994  Jeff Law  (law@snake.cs.utah.edu)

	* somread.c: Simplify by using stabsect_build_psymtabs.
	* dbxread.c (stabsect_build_psymtabs): New argument "text_name"
	corresponding to the name of the text section.  All references
	changed.
	(somstab_build_psymtabs): Delete function, no longer needed.

Sun Jun 26 23:54:08 1994  Jeff Law  (law@snake.cs.utah.edu)

	* somread.c: Renamed from paread.c.  Changed function names and
	comments to reflect that this file deals with SOM (an object file
	format), rather than the PA (a cpu).
	(Makefile.in): Chaned appropriately.
	(config/pa/hppabsd.mh, config/pa/hppahpux.mh): Likewise.
	* dbxread.c (somstab_build_psymtabs): Renamed from
	pastab_build_psymtabs.

Fri Jun 24 08:15:42 1994  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* core-sol2.c:  New file to handle ELF and BCP core file flavours.
	* config/sparc/sun4sol2.mh (NATDEPFILES):  Use it instead of
	core-svr4.
	* Makefile.in:  Updated for core-sol2.c.
	* README:  Add notes about SPARCworks cc under Solaris 2.x,
	from Casper H.S. Dik (casper@fwi.uva.nl).
	* config/mips/xm-makeva.h:  Removed, no longer necessary.
	* Makefile.in, config/mips/xm-irix3.h, config/mips/xm-irix5.h,
	config/mips/xm-mips.h, config/mips/xm-news-mips.h,
	config/mips/xm-riscos.h:  Remove references to xm-makeva.h

Wed Jun 22 17:48:21 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* gdba.el: Put program input and output in a separate buffer.

Wed Jun 22 16:54:15 1994  Fred Fish  (fnf@cygnus.com)
